WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
303437
[Site Isolation] Fix WebPageProxy::broadcastFrameTreeSyncData to check that message comes from process containing frame
https://bugs.webkit.org/show_bug.cgi?id=303437
Summary
[Site Isolation] Fix WebPageProxy::broadcastFrameTreeSyncData to check that m...
Kiet Ho
Reported
2025-12-02 16:53:56 PST
[Site Isolation] Fix WebPageProxy::broadcastFrameTreeSyncData to check that message comes from process containing frame
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-12-02 16:54:03 PST
<
rdar://problem/165728342
>
Kiet Ho
Comment 2
2025-12-02 17:15:25 PST
Pull request:
https://github.com/WebKit/WebKit/pull/54741
EWS
Comment 3
2025-12-03 13:52:44 PST
Committed
303863@main
(4feea4dd8f37): <
https://commits.webkit.org/303863@main
> Reviewed commits have been landed. Closing PR #54741 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug